...
      "isCommentAutoGenerated" : true
    },
    "Discard" : {
      "comment" : "A button that discards an audio recording.",
      "isCommentAutoGenerated" : true
    },
    "Discover" : {

    },
    "Discover new stories and moments together. Unlock Scenarios" : {
      "comment" : "A hint for the paywall banner.",
      "isCommentAutoGenerated" : true
    },
    "Dismiss" : {
      "comment" : "A button that dismisses an error message.",
      "isCommentAutoGenerated" : true
    },
    "Done" : {
      "comment" : "A button that dismisses a view.",
      "isCommentAutoGenerated" : true
    },
    "Duplicate" : {
      "comment" : "A button that duplicates a companion.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Set the tone before a conversation" : {
      "comment" : "A description of the purpose of the \"Set the tone before a conversation\" section.",
      "isCommentAutoGenerated" : true
    },
    "Settings" : {

    },
    "Share" : {
      "comment" : "A section that allows users to share their character.",
      "isCommentAutoGenerated" : true
    },
...
